# sre-smtp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
scripts/: format.sh
scripts/cmake/: FindFS.cmake
scripts/win/: .gitignore  build.bat  defaultconfig.bat
src/smtp-lib/: abstract_parser.hpp  connection.cpp  connection.hpp  content_parser.cpp  content_parser.hpp  envelop_parser.cpp  envelop_parser.hpp  mail.hpp  mail_builder.cpp  mail_builder.hpp  mail_parser.cpp  mail_parser.hpp  mail_persister.cpp  mail_persister.hpp  mail_receiver.cpp  mail_receiver.hpp  mail_state_machine.cpp  mail_state_machine.hpp  mail_store.cpp  mail_store.hpp  mailparser.cpp  mailparser.h  raw_socket.cpp  raw_socket.hpp  rawsocket.cpp  rawsocket.hpp  smtp_handler.cpp  smtp_handler.hpp  smtp_helper.hpp  smtp_server.cpp  smtp_server.hpp  smtp_utils.hpp  smtpserver.cpp  smtpserver.h  socket.cpp  socket.hpp  socket_listener.cpp  socket_listener.hpp  utils.hpp
src/smtp-lib-test/: acceptance_test.cpp  acceptancetest.cpp  connection_test.cpp  content_parser_test.cpp  envelop_parser_test.cpp  helpers.hpp  mail_builder_test.cpp  mail_parser_test.cpp  mail_state_machine_test.cpp  raw_socket_test.cpp  scenario_runner.cpp  scenario_runner.hpp  server_test.cpp  servertest.cpp  socket_listener_test.cpp
src/smtp-lib-test/scenarios/: basic.test  broken_token.test  multiple_mails.test  rfc5321_d_1.test  wrong_token.test
src/smtp-server/: main.cpp
